--- a/gezana_app/templates/gezana_app/base.html
+++ b/gezana_app/templates/gezana_app/base.html
@@ -18,6 +18,15 @@
     </header>
 
     <main>{% block content %} {% endblock %}</main>
+    <main>
+      {% if messages %}
+      <ul class="messages">
+        {% for message in messages %}
+        <li class="{{ message.tags }}">{{ message }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %} {% block content %}{% endblock %}
+    </main>
 
     <footer>
       <p>&copy; {% now "Y" %} Gezana Restaurant</p>
