--- a/gezana_app/templates/gezana_app/base.html
+++ b/gezana_app/templates/gezana_app/base.html
@@ -12,20 +12,23 @@
       <h1>Gezana</h1>
       <nav>
         <a href="{% url 'gezana_app:home' %}">Home</a>
-        <a href="#">Menu</a>
-        <a href="#">Book</a>
+        <a href="{% url 'gezana_app:menu_list' %}">Menu</a>
+        <a href="{% url 'gezana_app:make_booking' %}">Book</a>
       </nav>
     </header>
 
-    <main>{% block content %} {% endblock %}</main>
     <main>
+      <!-- MESSAGES (only place they should appear) -->
       {% if messages %}
       <ul class="messages">
         {% for message in messages %}
         <li class="{{ message.tags }}">{{ message }}</li>
         {% endfor %}
       </ul>
-      {% endif %} {% block content %}{% endblock %}
+      {% endif %}
+
+      <!-- THE ONLY content block -->
+      {% block content %}{% endblock %}
     </main>
 
     <footer>
