--- a/gezana_app/templates/gezana_app/booking_success.html
+++ b/gezana_app/templates/gezana_app/booking_success.html
@@ -1,5 +1,10 @@
-{% extends "gezana_app/base.html" %} {% block title %}Booking Confirmed{%
-endblock %} {% block content %}
+{% extends "gezana_app/base.html" %}
+
+{% block title %}
+Booking Confirmed
+{% endblock %}
+
+{% block content %}
 <h2>Your booking is confirmed!</h2>
 <p>We look forward to welcoming you at Gezana.</p>
 <a href="{% url 'gezana_app:home' %}">Return Home</a>
