--- a/gezana_app/templates/gezana_app/booking_success.html
+++ b/gezana_app/templates/gezana_app/booking_success.html
@@ -8,4 +8,5 @@ Booking Confirmed
 <h2>Your booking is confirmed!</h2>
 <p>We look forward to welcoming you at Gezana.</p>
 <a href="{% url 'gezana_app:home' %}">Return Home</a>
+<p>Your cancellation code: <strong>{{ booking.reference }}</strong></p>
 {% endblock %}
