--- a/gezana_app/templates/gezana_app/base.html
+++ b/gezana_app/templates/gezana_app/base.html
@@ -14,6 +14,7 @@
         <a href="{% url 'gezana_app:home' %}">Home</a>
         <a href="{% url 'gezana_app:menu_list' %}">Menu</a>
         <a href="{% url 'gezana_app:make_booking' %}">Book</a>
+        <a href="{% url 'gezana_app:cancel_booking' %}">Cancel Booking</a>
       </nav>
     </header>
 
