ADD THE LINKS TO NAVIGATION

--- a/gezana_app/templates/gezana_app/base.html
+++ b/gezana_app/templates/gezana_app/base.html
@@ -15,6 +15,8 @@
         <a href="{% url 'gezana_app:menu_list' %}">Menu</a>
         <a href="{% url 'gezana_app:make_booking' %}">Book</a>
         <a href="{% url 'gezana_app:cancel_booking' %}">Cancel Booking</a>
+        <a href="{% url 'gezana_app:about' %}">About</a>
+        <a href="{% url 'gezana_app:contact' %}">Contact</a>
       </nav>
     </header>
 
