--- a/gezana_app/templates/gezana_app/base.html
+++ b/gezana_app/templates/gezana_app/base.html
@@ -6,6 +6,8 @@
     <title>{% block title %}Gezana Restaurant{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <header>
