--- a/gezana_app/templates/gezana_app/base.html
+++ b/gezana_app/templates/gezana_app/base.html
@@ -11,16 +11,21 @@
   </head>
   <body>
     <header>
-      <h1>Gezana</h1>
-      <nav>
+    <div class="header-container">
+        <img src="{% static 'images/gezana_logo.png' %}" alt="Gezana Logo" class="logo">
+        <h1>Gezana Restaurant</h1>
+    </div>
+
+    <nav>
         <a href="{% url 'gezana_app:home' %}">Home</a>
         <a href="{% url 'gezana_app:menu_list' %}">Menu</a>
         <a href="{% url 'gezana_app:make_booking' %}">Book</a>
         <a href="{% url 'gezana_app:cancel_booking' %}">Cancel Booking</a>
         <a href="{% url 'gezana_app:about' %}">About</a>
         <a href="{% url 'gezana_app:contact' %}">Contact</a>
-      </nav>
-    </header>
+    </nav>
+</header>
+
 
     <main>
       <!-- MESSAGES (only place they should appear) -->
