change file type for hero image

--- a/gezana_app/static/css/style.css
+++ b/gezana_app/static/css/style.css
@@ -323,7 +323,7 @@ footer {
 ============================ */
 
 .hero {
-    background-image: url("../images/hero.jpg");
+    background-image: url("../images/hero.png");
     height: 350px;
     background-size: cover;
     background-position: center;
