--- a/gezana_app/templates/gezana_app/menu_list.html
+++ b/gezana_app/templates/gezana_app/menu_list.html
@@ -8,6 +8,7 @@
 
 <div class="menu-grid">
     {% for item in items %}
+       <p>Image URL Test: {{ item.image.url }}</p>
     <div class="menu-card fade-in">
 
         <div class="menu-card-header">
