Update style for menu card

--- a/gezana_app/templates/gezana_app/menu_list.html
+++ b/gezana_app/templates/gezana_app/menu_list.html
@@ -6,7 +6,7 @@
 <h2 class="menu-title">Our Authentic Habesha Dishes</h2>
 <p class="menu-subtitle">Freshly prepared with love, tradition, and bold East African flavours.</p>
 
-<div class="menu-grid">
+<div class="menu-container">
     {% for item in items %}
     <div class="menu-card fade-in">
 
