--- a/gezana_app/templates/gezana_app/base.html
+++ b/gezana_app/templates/gezana_app/base.html
@@ -51,3 +51,13 @@
     </footer>
   </body>
 </html>
+<script>
+function openModal(imgUrl) {
+    document.getElementById("modalImage").src = imgUrl;
+    document.getElementById("imageModal").style.display = "block";
+}
+
+function closeModal() {
+    document.getElementById("imageModal").style.display = "none";
+}
+</script>
