--- a/gezana_app/templates/gezana_app/booking_form.html
+++ b/gezana_app/templates/gezana_app/booking_form.html
@@ -2,6 +2,14 @@
 {% block content %}
 <h2>Book a Table</h2>
 
+{% if form.non_field_errors %}
+<div class="form-errors">
+    {% for error in form.non_field_errors %}
+    <p>{{ error }}</p>
+    {% endfor %}
+</div>
+{% endif %}
+
 <form method="post">
     {% csrf_token %}
 
