--- a/gezana_app/templates/gezana_app/base.html
+++ b/gezana_app/templates/gezana_app/base.html
@@ -25,6 +25,7 @@
         <li><a href="{% url 'gezana_app:make_booking' %}">Book</a></li>
         <li><a href="{% url 'gezana_app:about' %}">About</a></li>
         <li><a href="{% url 'gezana_app:contact' %}">Contact</a></li>
+        <li><a href="{% url 'admin:index' %}" target="_blank" rel="noopener noreferrer">Admin</a></li>
     </ul>
 </nav>
 
