Update the style

--- a/gezana_app/templates/gezana_app/contact.html
+++ b/gezana_app/templates/gezana_app/contact.html
@@ -15,7 +15,7 @@
     <p class="mini">Call us</p>
     <p class="callout">+353 85 123 4567</p>
     <p class="mini">Email</p>
-    <p class="callout">contact@gezana.ie</p>
+    <p class="callout">gezanabooking@gmail.com</p>
   </div>
 </section>
 
